Archive2/96/c3e96a4c3a4d51/main.cpp
enum struct foo { f };
enum struct bar { g };

int main()
{
    switch(foo::f) {
    case bar::g:;
    }
}